Renaming queues, topics and datasources with JBoss 7 compatibles JNDI names

--- a/test-core/src/main/resources/com/stratelia/webactiv/util/jndi.properties
+++ b/test-core/src/main/resources/com/stratelia/webactiv/util/jndi.properties
@@ -75,58 +75,58 @@ BUSREMOTEACCESSBM_EJBHOME	= ejb/BusRemoteAccessBm
 ADMINBM_EJBHOME			= ejb/AdminBm
 PDCBM_EJBHOME			= ejb/PdcBm
 
-SILVERPEAS_DATASOURCE		= jdbc/Silverpeas
-PUBLICATION_DATASOURCE		= jdbc/Silverpeas
-INTEREST_CENTER_DATASOURCE	= jdbc/Silverpeas
-VERSIONING_DATASOURCE		= jdbc/Silverpeas
-CONTACT_DATASOURCE		= jdbc/Silverpeas
-NODE_DATASOURCE			= jdbc/Silverpeas
-FAVORIT_DATASOURCE		= jdbc/Silverpeas
-SUBSCRIBE_DATASOURCE		= jdbc/Silverpeas
-STATISTIC_DATASOURCE		= jdbc/Silverpeas
-CALENDAR_DATASOURCE		= jdbc/Silverpeas
-ALMANACH_DATASOURCE		= jdbc/Silverpeas
-FORUMS_DATASOURCE		= jdbc/Silverpeas
-QUESTION_DATASOURCE		= jdbc/Silverpeas
-ANSWER_DATASOURCE		= jdbc/Silverpeas
-SURVEY_DATASOURCE		= jdbc/Silverpeas
-PERSONALIZATION_DATASOURCE	= jdbc/Silverpeas
-SCORE_DATASOURCE		= jdbc/Silverpeas
-QUESTIONCONTAINER_DATASOURCE	= jdbc/Silverpeas
-BOOKMARK_DATASOURCE		= jdbc/Silverpeas
-WEBSITES_DATASOURCE		= jdbc/Silverpeas
-TASKM_DATASOURCE		= jdbc/Silverpeas
-FORMDESIGNER_DATASOURCE		= jdbc/Silverpeas
-PDC_SUBSCRIPTION_DATASOURCE	= jdbc/Silverpeas
-PUZZLE_DATASOURCE		= jdbc/Silverpeas
-SILVERSTATISTICS_DATASOURCE	= jdbc/Silverpeas
-CRM_DATASOURCE			= jdbc/Silverpeas
-THESAURUS_DATASOURCE		= jdbc/Silverpeas
-PDC_BUSIHM_DATASOURCE		= jdbc/Silverpeas
-FILEBOXPLUS_DATASOURCE		= jdbc/Silverpeas
-QUESTIONREPLY_DATASOURCE	= jdbc/Silverpeas
-WHITEPAGES_DATASOURCE		= jdbc/Silverpeas
-PERSISTENCE_EJB_DATASOURCE	= jdbc/Silverpeas
+SILVERPEAS_DATASOURCE		= java:/datasources/silverpeas-jdbc
+PUBLICATION_DATASOURCE		= java:/datasources/silverpeas-jdbc
+INTEREST_CENTER_DATASOURCE	= java:/datasources/silverpeas-jdbc
+VERSIONING_DATASOURCE		= java:/datasources/silverpeas-jdbc
+CONTACT_DATASOURCE		= java:/datasources/silverpeas-jdbc
+NODE_DATASOURCE			= java:/datasources/silverpeas-jdbc
+FAVORIT_DATASOURCE		= java:/datasources/silverpeas-jdbc
+SUBSCRIBE_DATASOURCE		= java:/datasources/silverpeas-jdbc
+STATISTIC_DATASOURCE		= java:/datasources/silverpeas-jdbc
+CALENDAR_DATASOURCE		= java:/datasources/silverpeas-jdbc
+ALMANACH_DATASOURCE		= java:/datasources/silverpeas-jdbc
+FORUMS_DATASOURCE		= java:/datasources/silverpeas-jdbc
+QUESTION_DATASOURCE		= java:/datasources/silverpeas-jdbc
+ANSWER_DATASOURCE		= java:/datasources/silverpeas-jdbc
+SURVEY_DATASOURCE		= java:/datasources/silverpeas-jdbc
+PERSONALIZATION_DATASOURCE	= java:/datasources/silverpeas-jdbc
+SCORE_DATASOURCE		= java:/datasources/silverpeas-jdbc
+QUESTIONCONTAINER_DATASOURCE	= java:/datasources/silverpeas-jdbc
+BOOKMARK_DATASOURCE		= java:/datasources/silverpeas-jdbc
+WEBSITES_DATASOURCE		= java:/datasources/silverpeas-jdbc
+TASKM_DATASOURCE		= java:/datasources/silverpeas-jdbc
+FORMDESIGNER_DATASOURCE		= java:/datasources/silverpeas-jdbc
+PDC_SUBSCRIPTION_DATASOURCE	= java:/datasources/silverpeas-jdbc
+PUZZLE_DATASOURCE		= java:/datasources/silverpeas-jdbc
+SILVERSTATISTICS_DATASOURCE	= java:/datasources/silverpeas-jdbc
+CRM_DATASOURCE			= java:/datasources/silverpeas-jdbc
+THESAURUS_DATASOURCE		= java:/datasources/silverpeas-jdbc
+PDC_BUSIHM_DATASOURCE		= java:/datasources/silverpeas-jdbc
+FILEBOXPLUS_DATASOURCE		= java:/datasources/silverpeas-jdbc
+QUESTIONREPLY_DATASOURCE	= java:/datasources/silverpeas-jdbc
+WHITEPAGES_DATASOURCE		= java:/datasources/silverpeas-jdbc
+PERSISTENCE_EJB_DATASOURCE	= java:/datasources/silverpeas-jdbc
 MAIL_SESSION			= java:comp/env/MailSession
 USE_CATALOG_EJB			= java:comp/env/useCatalogEJB
 SECURITY_ADAPTER_CLASSNAME	= java:comp/env/securityAdapterClassName
 SEND_CONFIRMATION_MAIL		= java:comp/env/sendConfirmationMail
 
-ATTACHMENT_DATASOURCE		= jdbc/Silverpeas
-CONTAINERMANAGER_DATASOURCE	= jdbc/Silverpeas
-CONTENTMANAGER_DATASOURCE	= jdbc/Silverpeas
-CLASSIFYENGINE_DATASOURCE	= jdbc/Silverpeas
-PDC_DATASOURCE			= jdbc/Silverpeas
-ADMIN_DATASOURCE		= jdbc/Silverpeas
-FORMTEMPLATE_DATASOURCE		= jdbc/Silverpeas
-WORKFLOW_DATASOURCE		= jdbc/Silverpeas
-CHAT_DATASOURCE			= jdbc/Silverpeas
-INFOLETTER_DATASOURCE		= jdbc/Silverpeas
-OUTLOOK_DATASOURCE		= jdbc/Silverpeas
-GENERATOR_DATASOURCE		= jdbc/Silverpeas
-FORMDESIGNER_DB_DATASOURCE	= jdbc/Silverpeas
-DATABASE_DATASOURCE		= jdbc/Silverpeas
-PERSISTENCE_DB_DATASOURCE	= jdbc/Silverpeas
+ATTACHMENT_DATASOURCE		= java:/datasources/silverpeas-jdbc
+CONTAINERMANAGER_DATASOURCE	= java:/datasources/silverpeas-jdbc
+CONTENTMANAGER_DATASOURCE	= java:/datasources/silverpeas-jdbc
+CLASSIFYENGINE_DATASOURCE	= java:/datasources/silverpeas-jdbc
+PDC_DATASOURCE			= java:/datasources/silverpeas-jdbc
+ADMIN_DATASOURCE		= java:/datasources/silverpeas-jdbc
+FORMTEMPLATE_DATASOURCE		= java:/datasources/silverpeas-jdbc
+WORKFLOW_DATASOURCE		= java:/datasources/silverpeas-jdbc
+CHAT_DATASOURCE			= java:/datasources/silverpeas-jdbc
+INFOLETTER_DATASOURCE		= java:/datasources/silverpeas-jdbc
+OUTLOOK_DATASOURCE		= java:/datasources/silverpeas-jdbc
+GENERATOR_DATASOURCE		= java:/datasources/silverpeas-jdbc
+FORMDESIGNER_DB_DATASOURCE	= java:/datasources/silverpeas-jdbc
+DATABASE_DATASOURCE		= java:/datasources/silverpeas-jdbc
+PERSISTENCE_DB_DATASOURCE	= java:/datasources/silverpeas-jdbc
 
 JMS_HEADER_CHANNEL		= CHANNEL
 JMS_QUEUE			= com.stratelia.silverpeas.notificationserver.jms.Queue
