--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/jndi.properties
@@ -78,64 +78,64 @@ MYDB_EJBHOME = ejb/MyDBBm
 TAGCLOUDBM_EJBHOME = ejb/TagCloudBm
 NOTATIONBM_EJBHOME = ejb/NotationBm
 
-SILVERPEAS_DATASOURCE = Silverpeas
-PUBLICATION_DATASOURCE = Silverpeas
-INTEREST_CENTER_DATASOURCE = Silverpeas
-VERSIONING_DATASOURCE = Silverpeas
-CONTACT_DATASOURCE = Silverpeas
-NODE_DATASOURCE = Silverpeas
-FAVORIT_DATASOURCE = Silverpeas
-SUBSCRIBE_DATASOURCE = Silverpeas
-STATISTIC_DATASOURCE = Silverpeas
-CALENDAR_DATASOURCE = Silverpeas
-ALMANACH_DATASOURCE = Silverpeas
-FORUMS_DATASOURCE = Silverpeas
-QUESTION_DATASOURCE = Silverpeas
-ANSWER_DATASOURCE = Silverpeas
-SURVEY_DATASOURCE = Silverpeas
-PERSONALIZATION_DATASOURCE = Silverpeas
-SCORE_DATASOURCE = Silverpeas
-QUESTIONCONTAINER_DATASOURCE = Silverpeas
-BOOKMARK_DATASOURCE = Silverpeas
-WEBSITES_DATASOURCE = Silverpeas
-TASKM_DATASOURCE = Silverpeas
-FORMDESIGNER_DATASOURCE = Silverpeas
-PDC_SUBSCRIPTION_DATASOURCE = Silverpeas
-PUZZLE_DATASOURCE = Silverpeas
-SILVERSTATISTICS_DATASOURCE = Silverpeas
-CRM_DATASOURCE = Silverpeas
-THESAURUS_DATASOURCE = Silverpeas
-PDC_BUSIHM_DATASOURCE = Silverpeas
-FILEBOXPLUS_DATASOURCE = Silverpeas
-QUESTIONREPLY_DATASOURCE = Silverpeas
-WHITEPAGES_DATASOURCE = Silverpeas
-PERSISTENCE_EJB_DATASOURCE = Silverpeas
+SILVERPEAS_DATASOURCE = java:/datasources/silverpeas-jdbc
+PUBLICATION_DATASOURCE = java:/datasources/silverpeas-jdbc
+INTEREST_CENTER_DATASOURCE = java:/datasources/silverpeas-jdbc
+VERSIONING_DATASOURCE = java:/datasources/silverpeas-jdbc
+CONTACT_DATASOURCE = java:/datasources/silverpeas-jdbc
+NODE_DATASOURCE = java:/datasources/silverpeas-jdbc
+FAVORIT_DATASOURCE = java:/datasources/silverpeas-jdbc
+SUBSCRIBE_DATASOURCE = java:/datasources/silverpeas-jdbc
+STATISTIC_DATASOURCE = java:/datasources/silverpeas-jdbc
+CALENDAR_DATASOURCE = java:/datasources/silverpeas-jdbc
+ALMANACH_DATASOURCE = java:/datasources/silverpeas-jdbc
+FORUMS_DATASOURCE = java:/datasources/silverpeas-jdbc
+QUESTION_DATASOURCE = java:/datasources/silverpeas-jdbc
+ANSWER_DATASOURCE = java:/datasources/silverpeas-jdbc
+SURVEY_DATASOURCE = java:/datasources/silverpeas-jdbc
+PERSONALIZATION_DATASOURCE = java:/datasources/silverpeas-jdbc
+SCORE_DATASOURCE = java:/datasources/silverpeas-jdbc
+QUESTIONCONTAINER_DATASOURCE = java:/datasources/silverpeas-jdbc
+BOOKMARK_DATASOURCE = java:/datasources/silverpeas-jdbc
+WEBSITES_DATASOURCE = java:/datasources/silverpeas-jdbc
+TASKM_DATASOURCE = java:/datasources/silverpeas-jdbc
+FORMDESIGNER_DATASOURCE = java:/datasources/silverpeas-jdbc
+PDC_SUBSCRIPTION_DATASOURCE = java:/datasources/silverpeas-jdbc
+PUZZLE_DATASOURCE = java:/datasources/silverpeas-jdbc
+SILVERSTATISTICS_DATASOURCE = java:/datasources/silverpeas-jdbc
+CRM_DATASOURCE = java:/datasources/silverpeas-jdbc
+THESAURUS_DATASOURCE = java:/datasources/silverpeas-jdbc
+PDC_BUSIHM_DATASOURCE = java:/datasources/silverpeas-jdbc
+FILEBOXPLUS_DATASOURCE = java:/datasources/silverpeas-jdbc
+QUESTIONREPLY_DATASOURCE = java:/datasources/silverpeas-jdbc
+WHITEPAGES_DATASOURCE = java:/datasources/silverpeas-jdbc
+PERSISTENCE_EJB_DATASOURCE = java:/datasources/silverpeas-jdbc
 MAIL_SESSION = java:comp/env/MailSession
 USE_CATALOG_EJB = java:comp/env/useCatalogEJB
 SECURITY_ADAPTER_CLASSNAME = java:comp/env/securityAdapterClassName
 SEND_CONFIRMATION_MAIL = java:comp/env/sendConfirmationMail
 
-ATTACHMENT_DATASOURCE = Silverpeas
-CONTAINERMANAGER_DATASOURCE = Silverpeas
-CONTENTMANAGER_DATASOURCE = Silverpeas
-CLASSIFYENGINE_DATASOURCE = Silverpeas
-PDC_DATASOURCE = Silverpeas
-ADMIN_DATASOURCE = Silverpeas
-FORMTEMPLATE_DATASOURCE = Silverpeas
-WORKFLOW_DATASOURCE = Silverpeas
-CHAT_DATASOURCE = Silverpeas
-INFOLETTER_DATASOURCE = Silverpeas
-OUTLOOK_DATASOURCE = Silverpeas
-GENERATOR_DATASOURCE = Silverpeas
-FORMDESIGNER_DB_DATASOURCE = Silverpeas
-DATABASE_DATASOURCE = Silverpeas
-PERSISTENCE_DB_DATASOURCE = Silverpeas
-WIKI_DATASOURCE = Silverpeas
+ATTACHMENT_DATASOURCE = java:/datasources/silverpeas-jdbc
+CONTAINERMANAGER_DATASOURCE = java:/datasources/silverpeas-jdbc
+CONTENTMANAGER_DATASOURCE = java:/datasources/silverpeas-jdbc
+CLASSIFYENGINE_DATASOURCE = java:/datasources/silverpeas-jdbc
+PDC_DATASOURCE = java:/datasources/silverpeas-jdbc
+ADMIN_DATASOURCE = java:/datasources/silverpeas-jdbc
+FORMTEMPLATE_DATASOURCE = java:/datasources/silverpeas-jdbc
+WORKFLOW_DATASOURCE = java:/datasources/silverpeas-jdbc
+CHAT_DATASOURCE = java:/datasources/silverpeas-jdbc
+INFOLETTER_DATASOURCE = java:/datasources/silverpeas-jdbc
+OUTLOOK_DATASOURCE = java:/datasources/silverpeas-jdbc
+GENERATOR_DATASOURCE = java:/datasources/silverpeas-jdbc
+FORMDESIGNER_DB_DATASOURCE = java:/datasources/silverpeas-jdbc
+DATABASE_DATASOURCE = java:/datasources/silverpeas-jdbc
+PERSISTENCE_DB_DATASOURCE = java:/datasources/silverpeas-jdbc
+WIKI_DATASOURCE = java:/datasources/silverpeas-jdbc
 
 JMS_HEADER_CHANNEL = CHANNEL
 
-SILVERSTATISTICS_JMS_QUEUE = queue/statisticsQueue
-JMS_QUEUE = queue/notificationsQueue
+SILVERSTATISTICS_JMS_QUEUE = java:/queue/statisticsQueue
+JMS_QUEUE = java:/queue/notificationsQueue
 
 SILVERSTATISTICS_JMS_FACTORY = java:/XAConnectionFactory
 JMS_FACTORY = java:/XAConnectionFactory
