--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle.properties
@@ -96,3 +96,5 @@ profil.subnav.display=Afficher :
 profil.subnav.identity=Identit\u00e9
 
 invitation.send = Envoyer une invitation
+
+myProfile.status.timeout = Votre session a expir\u00e9. Votre statut n'a pas pu \u00eatre enregistr\u00e9.
