Feature #2715 Refactoring filesharing as sharing since we are no longer sharing files only

--- a/config-core/src/main/config/silvertrace/fileSharingModule.properties
+++ b/config-core/src/main/config/silvertrace/fileSharingModule.properties
@@ -29,8 +29,8 @@
 # module.path = <Log4JModulePath>
 # 
 
-module.name=fileSharing
-module.path=Silverpeas.BusIHM.fileSharing
+module.name=sharingTicket
+module.path=Silverpeas.BusIHM.sharingTicket
 
 # APPENDERS
 # ---------
