Feature #2829. Now the integration of the Aurore's work with mine userpanel prototype is almost finished. Some details are on the way

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/selection/multilang/selectionBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/selection/multilang/selectionBundle.properties
@@ -37,7 +37,7 @@ selection.genericUsers    = Utilisateurs Generic
 selection.informatique    = Informaticiens
 
 selection.arttitle        = Disponibles
-selection.artfouList      = Sélection des articles à ajouter
+selection.artfouList      = S\u00e9lection des articles \u00e0 ajouter
 selection.fouCode         = Code Fournisseur
-selection.reference       = Référence Fournisseur
-selection.artid           = Référence Generic
+selection.reference       = R\u00e9f\u00e9rence Fournisseur
+selection.artid           = R\u00e9f\u00e9rence Generic
