--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -170,6 +170,7 @@ GML.unlock					        = D&eacute;v&eacute;rouiller
 GML.upload						= T\u00e9l\u00e9chargement
 GML.user						= Utilisateur
 GML.users						= Utilisateurs
+GML.user_s                      = utilisateur(s)
 
 GML.validate					= Valider
 GML.viewCalendar				= Afficher le calendrier
@@ -304,3 +305,8 @@ GML.Show = Afficher :
 GML.selectAValue = Veuillez s\u00e9lectionner une valeur
 
 GML.Validation = Validation
+GML.pagination.FirstPage=Premi\u00e8re page
+GML.pagination.LastPage=Derni\u00e8re page
+GML.pagination.ScrollNextPages=>>
+GML.pagination.ScrollPreviousPages=<<
+GML.pagination.GoToPage=Page
