Feature #2829. The integration of the Aurore's work is finished. By the process, some additional JQuery plugins were introduced: smartpaginator to paginate a list of items and breadcrumb, a custom breadcrumb trail implementation, to render the current navigation trail of the user. Beside that, a silverpeas-profile.js javascript file was also created to manage both the user groupsand the user profiles in client side (for instance if provides only the functionalities required by the user panel , nevertheless it can be extended to cover other requirements)

--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle.properties
@@ -21,22 +21,30 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 selection.UserSelectionPanel=S\u00e9lection des Utilisateurs
-selection.Filter=Filtrer par
-selection.groupFound=groupe(s) trouv\u00e9(s)
+selection.Filter=Filtres
+selection.groupFound=groupe trouv\u00e9
 selection.AddToSelection=Ajouter \u00e0 la s\u00e9lection
 selection.AllUsers=Tous les utilisateurs
 selection.RootUserGroups=Groupes
 selection.searchUserGroups=recherche groupes
 selection.AddAllGroups=Ajouter tous les groupes
 selection.AddAllGroupsToSelection=Ajouter tous les groupes \u00e0 la s\u00e9lection
-selection.SelectedUsersAndGroups=Groupes et utilisateurs s\u00e9lection\u00e9s 
-selection.groupSelected=groupe(s) s\u00e9lectionn\u00e9(s)
-selection.userSelected=utilisateur(s) s\u00e9lectionn\u00e9(s)
+selection.SelectedUsersAndGroups=S\u00e9lection
+selection.groupSelected=groupe s\u00e9lectionn\u00e9
+selection.userSelected=utilisateur s\u00e9lectionn\u00e9
 selection.RemoveFromSelection=Enlever de la s\u00e9lection
 selection.Empty=Vider
 selection.RemoveAllGroupsFromSelection=Enlever tous les groupes de la s\u00e9lection
 selection.searchUsers=recherche utilisateurs
-selection.userFound=utilisateur(s) trouv\u00e9(s)
+selection.userFound=utilisateur trouv\u00e9
 selection.AddAllUsersToSelection=Ajouter tous les utilisateurs \u00e0 la s\u00e9lection
 selection.AddAllUsers=Ajouter tous les utilisateurs
 selection.RemoveAllUsersFromSelection=Enlever tous les utilisateurs de la s\u00e9lection
+selection.selectedUsers=Utilisateurs s\u00e9lectionn\u00e9s
+selection.selectedGroups=Groupes s\u00e9lectionn\u00e9s
+selection.groupsSelected=groupes s\u00e9lectionn\u00e9s
+selection.usersSelected=utilisateurs s\u00e9lectionn\u00e9s
+selection.groupsFound=groupes trouv\u00e9s
+selection.usersFound=utilisateurs trouv\u00e9s
+selection.SelectedUsers=S\u00e9lection
+selection.SelectedGroups=S\u00e9lection
