--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -305,8 +305,8 @@ GML.Show = Afficher :
 GML.selectAValue = Veuillez s\u00e9lectionner une valeur
 
 GML.Validation = Validation
-GML.pagination.FirstPage=Premi\u00e8re page
-GML.pagination.LastPage=Derni\u00e8re page
-GML.pagination.ScrollNextPages=>>
-GML.pagination.ScrollPreviousPages=<<
+GML.pagination.FirstPage=<<
+GML.pagination.LastPage=>>
+GML.pagination.ScrollNextPages=>
+GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
