Feature #2829. Add a new filter in the user panel to fetchs the user's relationships (its contacts within the Silverpeas social network)

--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle.properties
@@ -48,3 +48,4 @@ selection.groupsFound=groupes trouv\u00e9s
 selection.usersFound=utilisateurs trouv\u00e9s
 selection.SelectedUsers=S\u00e9lection
 selection.SelectedGroups=S\u00e9lection
+selection.MyContacts=Mes contacts
