Feature #2829. Fix the last discovered issues and improve the user search by using the UserDAO instead of the ugly UserTable

--- a/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/selection/multilang/selectionBundle.properties
@@ -49,3 +49,4 @@ selection.usersFound=utilisateurs trouv\u00e9s
 selection.SelectedUsers=S\u00e9lection
 selection.SelectedGroups=S\u00e9lection
 selection.MyContacts=Mes contacts
+selection.SelectedUserOrGroup=S\u00e9lection unique
