Feature #2715 : all is working as it used to be

--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -87,6 +87,11 @@
     </dependency>
     <dependency>
       <groupId>org.powermock</groupId>
+      <artifactId>powermock-classloading-xstream</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
       <artifactId>powermock-api-mockito</artifactId>
       <scope>compile</scope>
     </dependency>
