--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -20,6 +20,12 @@
       <groupId>junit</groupId>
       <artifactId>junit-dep</artifactId>
       <scope>compile</scope>
+      <exclusions>
+          <exclusion>
+              <groupId>org.hamcrest</groupId>
+              <artifactId>hamcrest-core</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
