--- a/.gitignore
+++ b/.gitignore
@@ -3,58 +3,17 @@
 *.iml
 catalog.xml
 target
+.settings
+.classpath
+.project
 .sonar-ide.properties
-/lib-core/.settings
-/lib-core/.classpath
-/lib-core/.project
-/config-core/.settings
-/config-core/.project
-/war-core/.settings
-/war-core/.classpath
-/war-core/.project
-/web-core/.settings
-/web-core/.classpath
-/web-core/.project
 /web-core/src/main/java/META-INF
 /war-core/src/main/webapp/META-INF
-/ejb-core/channels/.settings
-/ejb-core/channels/.classpath
-/ejb-core/channels/.project
 /ejb-core/channels/src/main/resources/META-INF/MANIFEST.MF
-/ejb-core/pdc/.settings
-/ejb-core/pdc/.classpath
-/ejb-core/pdc/.project
-/ejb-core/searchengine/.settings
-/ejb-core/searchengine/.classpath
-/ejb-core/searchengine/.project
 /ejb-core/pdc/src/main/resources/META-INF/MANIFEST.MF
-/ejb-core/searchengine/src/main/resources/META-INF/MANIFEST.MF
-/ejb-core/versioning/.settings
-/ejb-core/versioning/.classpath
-/ejb-core/versioning/.project
-/ejb-core/publication/.settings
-/ejb-core/publication/.classpath
-/ejb-core/publication/.project
 /ejb-core/publication/src/main/resources/META-INF/MANIFEST.MF
-/ejb-core/node/.project
-/ejb-core/node/.settings
-/ejb-core/node/.classpath
 /ejb-core/node/src/main/resources/META-INF/MANIFEST.MF
-/ejb-core/formtemplate/.project
-/ejb-core/formtemplate/.settings
-/ejb-core/formtemplate/.classpath
 /ejb-core/versioning/src/main/resources/META-INF/MANIFEST.MF
-/ejb-core/calendar/.settings
-/ejb-core/calendar/.classpath
-/ejb-core/calendar/.project
 /ejb-core/calendar/src/main/resources/META-INF/MANIFEST.MF
-/ejb-core/questioncontainer/.classpath
-/ejb-core/questioncontainer/.project
-/ejb-core/questioncontainer/.settings
 /ejb-core/questioncontainer/src/main/resources/META-INF/MANIFEST.MF
-/.project
-/.settings
-/test-core/.classpath
-/test-core/.project
-/test-core/.settings
 web-core/@ErrorDir@/
