More infos on LDAP domains

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDJ.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDJ.properties
@@ -64,6 +64,7 @@ users.Filter=
 # Note : To make domains easiest to change, the Id must be set to the login field
 #        It's not an obligation but it's very strongly advised
 users.IdField=entryUUID
+#users.LoginField=uid
 users.LoginField=cn
 users.FirstNameField=givenName
 users.LastNameField=sn
@@ -122,7 +123,7 @@ groups.DescriptionField=description
 # MapParameter : Name of the LDAP corresponding field
 
 property.Number = 9
-property.ResourceFile = com.stratelia.silverpeas.domains.multilang.domainOpenDSBundle
+property.ResourceFile = com.stratelia.silverpeas.domains.multilang.domainOpenDJBundle
 
 property_1.Name = title
 property_1.Type = STRING
