fixing partially bug #3090 adding missing displayer types...

--- a/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/settings/workflowDesigner.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/settings/workflowDesigner.properties
@@ -25,7 +25,7 @@ languages = fr,en,de
 actionKinds = create,update,delete
 operators = =,!=,<,<=,>,>=,contains
 itemTypes = text,date,user,file,explorer
-displayerNames = text,textarea,checkbox,listbox,radio,file,simpletext,user,explorer
+displayerNames = text,textarea,wysiwyg,checkbox,listbox,radio,checkbox,simpletext,url,time,file,image,video,user,multipleUser,group,ldap,jdbc,explorer
 componentDescriptor.parameterLabel = Modèle de procédures
 componentDescriptor.suite = 05 Workflow
 componentDescriptor.managerInstanciator = com.silverpeas.processManager.ProcessManagerInstanciator
