restful-service-annotation: some annotations are added to indicate a REST-based web service requires an access from an authenticated user or from an authorized user (an authorized user implies the user is also authenticated, so the authentication is also validate). Each method invocation of a REST resource annoted with @Authenticated implies automatically a validation of the user session whereas the annotation @Authorized implies also the user has enough rights to access the annoted web resource. Theses annotations are treated by annotation processors using AOP.

--- a/web-core/pom.xml
+++ b/web-core/pom.xml
@@ -15,6 +15,10 @@
   
   <dependencies>
     <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.transaction</groupId>
       <artifactId>jta</artifactId>
     </dependency>
@@ -278,6 +282,28 @@
     <filters>
       <filter>src/test/filters/filters.properties</filter>
     </filters>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>aspectj-maven-plugin</artifactId>
+        <version>1.4</version>
+        <configuration>
+          <complianceLevel>1.6</complianceLevel>
+          <source>1.6</source>
+          <target>1.6</target>
+          <encoding>UTF-8</encoding>
+          <proceedOnError>true</proceedOnError>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+              <goal>test-compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 
   <reporting>
