--- a/ejb-core/comment/src/test/resources/jdbc.properties
+++ b/ejb-core/comment/src/test/resources/jdbc.properties
@@ -25,7 +25,7 @@ driverClassName=${jdbc_driver}
 url=${jdbc_url}
 username=${jdbc_login}
 password=${jdbc_password}
-jndi.name=java:/datasources/silverpeas-jdbc
+jndi.name=jdbc/Silverpeas
 
 jdbc.driver=${jdbc_driver}
 jdbc.url=${jdbc_url}
