Adding support for tar.gz and tar.bz2 archives files for import

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/mime_types.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/mime_types.properties
@@ -227,3 +227,7 @@ xlsm	application/vnd.ms-excel.sheet.macroEnabled.12
 xlsx	application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
 xltm	application/vnd.ms-excel.template.macroEnabled.12
 xltx	application/vnd.openxmlformats-officedocument.spreadsheetml.template
+bz2  application/x-bzip
+tar.bz2 application/x-bzip
+tbz2  application/x-bzip
+tb2 application/x-bzip
