--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -362,6 +362,8 @@
           <exclude>**/*.doc</exclude>
           <exclude>**/*.docx</exclude>
           <exclude>**/*.zip</exclude>
+          <exclude>**/*.tar.gz</exclude>
+          <exclude>**/*.tar.bz2</exclude>
           <exclude>**/*.sql</exclude>
         </excludes>
       </testResource>
@@ -375,6 +377,8 @@
           <include>**/*.doc</include>
           <include>**/*.docx</include>
           <include>**/*.zip</include>
+          <include>**/*.tar.gz</include>
+          <include>**/*.tar.bz2</include>
           <include>**/*.sql</include>
         </includes>
       </testResource>
