update feature #2403, add javascript date format inside common date properties

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/date/multilang/date.properties
@@ -26,6 +26,7 @@
 dateInputFormat = dd/MM/yy
 dateOutputFormat = dd/MM/yyyy
 hourOutputFormat = HH:mm
+date.format.javascript = dd/mm/yy
 
 # jour
   weekFirstDay = 2
