--- a/lib-core/src/test/resources/com/stratelia/webactiv/util/attachment/mime_types.properties
+++ b/lib-core/src/test/resources/com/stratelia/webactiv/util/attachment/mime_types.properties
@@ -11,7 +11,7 @@
 # Open Source Software ("FLOSS") applications as described in Silverpeas's
 # FLOSS exception.  You should have recieved a copy of the text describing
 # the FLOSS exception, and it is also available here:
-# "http://repository.silverpeas.com/legal/licensing"
+# "http://www.silverpeas.com/legal/licensing"
 #
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -22,7 +22,13 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # Registered mime-types							
-							
+bz2  application/x-bzip
+tar.bz2 application/x-bzip
+tbz2  application/x-bzip
+tb2 application/x-bzip
+tar.gz application/x-gzip
+tgz application/x-gzip
+
 3d	application/xview3d-3d
 #			application/activemessage
 #			application/andrew-inset
@@ -62,8 +68,8 @@ dcr			application/x-director
 dir			application/x-director
 dxr			application/x-director
 dvi			application/x-dvi
-gtar			application/x-gtar
-gz			application/x-gzip
+gtar  application/x-gtar
+gz  application/x-gzip
 hdf			application/x-hdf
 cgi			application/x-httpd-cgi
 skp			application/x-koan
