#improve-aspect-weaving Replace the weaving of the aspects in the code done previously by the aspectJ compiler by the the proxying feature of Spring

--- a/ws-test-core/pom.xml
+++ b/ws-test-core/pom.xml
@@ -49,6 +49,19 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-spring</artifactId>
       <scope>provided</scope>
