Adding LDAP configuration tutorial

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/defaultLookSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/defaultLookSettings.properties
@@ -24,3 +24,4 @@
 Initial = com.stratelia.webactiv.util.viewGenerator.settings.SilverpeasLight
 SilverpeasV5 = com.stratelia.webactiv.util.viewGenerator.settings.SilverpeasV5
 DeathMetal = com.stratelia.webactiv.util.viewGenerator.settings.Metal
+Bloody = com.stratelia.webactiv.util.viewGenerator.settings.Dexter
