--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ target
 .classpath
 .project
 .sonar-ide.properties
+nb-configuration.xml
 /web-core/src/main/java/META-INF
 /war-core/src/main/webapp/META-INF
 /ejb-core/channels/src/main/resources/META-INF/MANIFEST.MF
