Adding link to LDAP synchronization

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDJ.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/domainOpenDJ.properties
@@ -74,11 +74,11 @@ users.EmailField=mail
 # Groups' settings
 # ----------------
 #Depend de l'impl\u00e9mentation
-groups.ClassName=groupOfUniqueNames
+groups.ClassName=groupOfNames
 # Note : the filter MUST be put between parentheses.
 #        there MUSTN'T have dummy parentheses levels ex : (&((Condition1))(Condition2)) will NOT works, (&(Condition1)(Condition2)) will works
 # (&(objectCategory=CN=group,CN=Schema,CN=Configuration,DC=TSTEXCHANGE)(member=*))
-groups.Filter=(uniqueMember=*)
+groups.Filter=(member=*)
 # Set the id Field to the 'cn' insteed of the DN to allow groups to move in the LDAP database
 # Set to objectGUID to have a unique ID
 groups.IdField=entryUUID
