--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,8 @@
               <version>2.8</version>
             </plugin>
           </reportPlugins>
+          <relativizeDecorationLinks>false</relativizeDecorationLinks>
+          <generateSitemap>true</generateSitemap>
         </configuration>
       </plugin>
 <!--
