Updating installer versions

--- a/pom.xml
+++ b/pom.xml
@@ -238,8 +238,8 @@
   </modules>
 
   <properties>
-    <installer_stable_version>5.8.1</installer_stable_version>
-    <installer_version>${project.version}</installer_version>
+    <installer_stable_version>5.9</installer_stable_version>
+    <installer_version>5.10-SNAPSHOT</installer_version>
   </properties>
 
 </project>
