--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.silverpeas</groupId>
@@ -11,7 +13,9 @@
   <artifactId>war-core</artifactId>
   <packaging>war</packaging>
   <name>Core Webapp - ${project.version}</name>
-  <description>The Web GUI for the core elements of Silverpeas : Administration, notifications and all the navigation.</description>
+  <description>The Web GUI for the core elements of Silverpeas : Administration, notifications and
+    all the navigation.
+  </description>
 
   <dependencies>
     <dependency>
@@ -149,15 +153,25 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-        <groupId>org.hibernate.javax.persistence</groupId>
-        <artifactId>hibernate-jpa-2.0-api</artifactId>
-        <scope>provided</scope>
-      </dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.0-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>test-core</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -196,28 +210,28 @@
             </webResource>
           </webResources>
         </configuration>
-    </plugin>
-  </plugins>
-        <!--    <plugins>
-          <plugin>
+      </plugin>
+    </plugins>
+    <!--    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo.jspc</groupId>
+        <artifactId>jspc-maven-plugin</artifactId>
+        <version>2.0-alpha-3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
             <groupId>org.codehaus.mojo.jspc</groupId>
-            <artifactId>jspc-maven-plugin</artifactId>
+            <artifactId>jspc-compiler-tomcat6</artifactId>
             <version>2.0-alpha-3</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>compile</goal>
-                </goals>
-              </execution>
-            </executions>
-            <dependencies>
-              <dependency>
-                <groupId>org.codehaus.mojo.jspc</groupId>
-                <artifactId>jspc-compiler-tomcat6</artifactId>
-                <version>2.0-alpha-3</version>
-              </dependency>
-            </dependencies>
-          </plugin>
-        </plugins>-->
-</build>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>-->
+  </build>
 </project>
