Feature #3180 : handle expired password for Active Directory domain Handle expired password on authentication on Active Directory domain Throw exception when trying to change password on an Active Directory with a non-secure connection

--- a/config-core/src/main/config/properties/com/silverpeas/authentication/settings/passwordExpiration.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/settings/passwordExpiration.properties
@@ -31,3 +31,5 @@ notificationType=POPUP
 
 # password Change page URL : admin/jsp/passwordAboutToExpire.jsp
 passwordChangeURL=/defaultPasswordAboutToExpire.jsp
+
+passwordExpiredURL=/defaultPasswordExpired.jsp
