--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainMSAD.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainMSAD.properties
@@ -27,6 +27,8 @@
 # Fallback type : could be one of the following values : none, ifNotRejected, always
 fallbackType=always
 
+allowPasswordChange=false
+
 # Authentication servers
 # Available types are : com.stratelia.silverpeas.authentication.AuthenticationNT, com.stratelia.silverpeas.authentication.AuthenticationSQL and com.stratelia.silverpeas.authentication.AuthenticationLDAP
 
@@ -40,5 +42,9 @@ autServer0.LDAPAccessLogin=CN=bob,CN=Users,DC=TOTO,DC=BOB
 autServer0.LDAPAccessPasswd=bob
 autServer0.LDAPUserBaseDN=OU=Utilisateurs,OU=testSynchro,DC=toto,DC=bob
 autServer0.LDAPUserLoginFieldName=sAMAccountName
+#Connection must be secured if you plan to change passwords
 autServer0.LDAPSecured=false
 autServer0.LDAPSecuredPort=636
+autServer0.LDAPPwdLastSetFieldName=pwdLastSet
+autServer0.LDAPPwdLastSetFieldFormat=nanoseconds
+autServer0.MustAlertPasswordExpiration=false
