--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -122,6 +122,11 @@
             <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
             <param-value>true</param-value>
         </init-param>
+        <init-param>
+            <description>Packages in which are defined both REST resources and mapper providers not managed by Spring</description>
+            <param-name>com.sun.jersey.config.property.packages</param-name>
+            <param-value>org.codehaus.jackson.jaxrs;com.silverpeas.web.mappers</param-value>
+        </init-param>
     </servlet>
     <servlet>
         <servlet-name>AuthenticationServlet</servlet-name>
@@ -494,9 +499,9 @@
         <servlet-class>com.silverpeas.socialNetwork.myProfil.servlets.MyProfilRequestRouter</servlet-class>
     </servlet>
     <servlet>
-      <display-name>GoToMyProfile</display-name>
-      <servlet-name>GoToMyProfile</servlet-name>
-      <servlet-class>com.silverpeas.socialNetwork.myProfil.servlets.GoToMyProfile</servlet-class>
+        <display-name>GoToMyProfile</display-name>
+        <servlet-name>GoToMyProfile</servlet-name>
+        <servlet-class>com.silverpeas.socialNetwork.myProfil.servlets.GoToMyProfile</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>MyProfilJSONServlet</servlet-name>
