Feature #3110 : adding the core system of the delayed notifications

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/settings/notificationManagerSettings.properties
@@ -44,3 +44,10 @@ addReceiversInBody = false
 notif.receiver.displayGroup = false
 # actif uniquement si displayGroup = false : Si le groupe contient plus de "displayUser.threshold" utilisateurs alors le nom du groupe est affich\u00e9
 notif.receiver.displayUser.threshold = 20
+
+# Code de la fréquence, les valeurs suivantes sont possibles :
+# - "N", none : aucune
+# - "D", daily : quotidienne
+# - "W", weekly : hebdomadaire
+# - "M", monthly : mensuelle
+DEFAULT_DELAYED_NOTIFICATION_FREQUENCY = N
