--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/templateDomainSQL.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/domains/templateDomainSQL.properties
@@ -25,5 +25,5 @@
 # -------------------
 
 # Available values : ClearText, CryptUnix, CryptMd5
-database.SQLPasswordEncryption = CryptMd5
+database.SQLPasswordEncryption = CryptUnix
 allowPasswordChange = true
