Closes feature #3263 and #2786

--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
@@ -29,15 +29,17 @@ authentication.logon.password = Mot de passe
 authentication.logon.domain = Domaine
 authentication.logon.passwordForgotten = Mot de passe oubli\u00E9 ?
 authentication.logon.passwordRemember = M\u00E9moriser le mot de passe ?
+authentication.logon.newRegistration = Nouvel utilisateur ? Enregistrez-vous
 authentication.logon.loginMissing = Veuillez renseigner votre login
 authentication.logon.passwordReinit = R\u00E9initialiser mon mot de passe...
-authentication.logon.socialNetworkLogin = Ou se connecter avec
+authentication.logon.socialNetworkLogin = Identifiez-vous avec
 
 # traitement des erreurs de login
 authentication.logon.1 = Login ou mot de passe incorrect
 authentication.logon.2 = Probl\u00E8me technique
 authentication.logon.3 = Votre session a expir\u00E9
 authentication.logon.4 = D\u00E9connexion utilisateur
+authentication.logon.5 = Aucun compte rattach\u00E9 \u00E0 votre compte de r\u00E9seau social
 
 authentication.reminder.label = Veuillez r\u00E9pondre \u00E0 la question personnelle ci-dessous
 authentication.reminder.noQuestion = Vous n'avez pas encore choisi de question personnelle. Cette question vous permettra de r\u00E9initialiser votre mot de passe en cas d'oubli.
@@ -57,3 +59,19 @@ authentication.password.different = Le mot de passe et sa confirmation ne sont p
 authentication.password.aboutToExpire = Votre mot de passe arrive bient\u00F4t \u00E0 expiration. Il est conseill\u00E9 de le changer dans les plus brefs d\u00E9lais.
 authentication.password.change = Changer le mot de passe
 authentication.password.remindMeLater = Me le rappeler plus tard
+
+registration.title = Enregistrement
+registration.noSilverpeasAccount = Vous ne possédez pas encore de compte dans Silverpeas.
+registration.completeProfile = Veuillez compléter votre profil pour vous enregistrer
+registration.firstname = Prénom
+registration.lastname = Nom
+registration.email = Email
+registration.firstNameRequired = Le champ 'Prénom' est obligatoire
+registration.lastNameRequired = Le champ 'Nom' est obligatoire
+registration.emailRequired = Le champ 'Email' est obligatoire
+registration.emailBadSyntax = Le champ 'Email' ne contient pas un adresse correcte
+registration.alreadyRegistered = Un compte utilisant cet email est déjà utilisé.
+registration.succesTitle = Enregistrement terminé
+registration.success = Vous êtes maintenant enregistré sur la plateforme. Vos identifiants vous ont été envoyés par mail.
+registration.failedTitle = Echec de l'enregistrement
+registration.failed = L'enregistrement du nouvel utilisateur a échoué
