--- a/config-core/src/main/config/properties/com/silverpeas/authentication/settings/authenticationSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/settings/authenticationSettings.properties
@@ -32,5 +32,5 @@ encryptionClass =
 allowUserSelfRegistration = false
 
 # Such new user will be created in below domainId
+newRegistrationEnabled = false
 justRegisteredDomainId = 0
- 
