--- a/config-core/src/main/config/properties/com/silverpeas/socialnetwork/settings/socialNetworkSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialnetwork/settings/socialNetworkSettings.properties
@@ -9,9 +9,11 @@ templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/socialNetwork/
 customersTemplatePath=${SILVERPEAS_DATA_HOME}/StringTemplates/socialNetwork/
 
 #An LinkedIn application must be declared : LinkedIn will give you both consumer and secret keys
+linkedIn.enable = false
 linkedIn.consumerKey = 178g9y3p1850
 linkedIn.secretKey = ejpvgiKBhH0jwXYm
 
 #An Facebook application must be declared : Facebook will give you both consumer and secret keys
+facebook.enable = false
 facebook.consumerKey = 210906708982608
 facebook.secretKey = bb7d245661ffbe2801b23d46d1337f35
