Change the dependency on cdi to on inject

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -202,8 +202,8 @@
       <groupId>org.codehaus.jackson</groupId>
     </dependency>
     <dependency>
-      <groupId>javax.enterprise</groupId>
-      <artifactId>cdi-api</artifactId>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
