--- a/ws-test-core/pom.xml
+++ b/ws-test-core/pom.xml
@@ -34,6 +34,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit-dep</artifactId>
       <scope>compile</scope>
