Feature #3110 : adding the core system of the delayed notifications

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle.properties
@@ -57,4 +57,18 @@ testMsgFrom=silverpeas@silverpeas.com
 
 guestNotAllowedTitle=Impossible de notifier !
 guestNotAllowedBody1=Impossible d'envoyer la notification : 
-guestNotAllowedBody2=Désolé, mais en tant qu'invité, vous ne pouvez pas notifier.
+guestNotAllowedBody2=D\u00e9sol\u00e9, mais en tant qu'invit\u00e9, vous ne pouvez pas notifier.
+
+# Definitions about delayed notifications
+frequencyDAILY=quotidienne
+frequencyWEEKLY=hebdomadaire
+frequencyMONTHLY=mensuelle
+
+delayDAILY=un jour
+delayWEEKLY=une semaine
+delayMONTHLY=un mois
+
+resourceActionCREATE=cr\u00e9\u00e9e
+resourceActionUPDATE=modifi\u00e9e
+resourceActionDELETE=supprim\u00e9e
+resourceActionREPORT=signal\u00e9e
