Feature #3110 : modifying the UI of notification settings

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle.properties
@@ -102,3 +102,12 @@ WrongLength = La longueur du mot de passe est insuffisante !
 NoSpacesInPassword = Le mot de passe ne doit pas contenir d'espace !
 LoginQuestion = Question en cas d'oubli de mot de passe
 LoginAnswer = Réponse à la question
+
+channelChoiceLabel = Choix du canal de notification :
+frequencyChoiceLabel = Fréquence de réception des mails :
+
+frequencyDefault=Par d\u00E9faut ({0})
+frequencyNONE=Instantan\u00E9e
+frequencyDAILY=Quotidienne
+frequencyWEEKLY=Hebdomadaire
+frequencyMONTHLY=Mensuelle
