--- a/lib-core/src/test/resources/com/silverpeas/util/stringtemplate.properties
+++ b/lib-core/src/test/resources/com/silverpeas/util/stringtemplate.properties
@@ -1,4 +1,4 @@
-template.dir.components.default = 
-template.dir.components.custom = 
+template.dir.components.default = ./src/test/resources/templates/components/
+template.dir.components.custom = ./src/test/resources/templates/components/
 template.dir.core.default = ./src/test/resources/templates/core/
 template.dir.core.custom = ./src/test/resources/templates/core/
