closing feature #3250. Now internet address is fully defined (address and personal name). Adding default personal name in case of unauthorized domain.

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/smtpSettings.properties
@@ -29,4 +29,5 @@ SMTPServer = smtp-msa.orange.fr
 SMTPDebug = false
 SMTPSecure = false
 NotificationAddress = silverpeas@silverpeas.com
+NotificationPersonalName = Silverpeas
 AuthorizedDomains=silverpeas.net,silverpeas.org,silverpeas.com,oeovo.com,oosphere.com,oosphere.ch
