Feature #3111. Add a link to send a message to the user. Now the button to tchat with the user is disabled when he is'nt connected

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -311,3 +311,13 @@ GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
 GML.internalDomain=Domaine mixte
+GML.notification.send=Envoyer un message
+GML.user.online=Connect\u00e9(e)
+GML.user.online.for=Connect\u00e9(e) depuis
+GML.notification.subject=Sujet
+GML.user.offline=D\u00e9connect\u00e9(e)
+GML.notification.message=Message
+GML.user.type.U=Utilisateur
+GML.user.type.D=Gestionnaire de domaine
+GML.user.type.A=Administrateur
+GML.user.type.G=Invit\u00e9
