--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ target
 .project
 .sonar-ide.properties
 nb-configuration.xml
+nbactions.xml
 /web-core/src/main/java/META-INF
 /war-core/src/main/webapp/META-INF
 /ejb-core/channels/src/main/resources/META-INF/MANIFEST.MF
