Feature #3110 : wiring delayed notification tools

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle.properties
@@ -72,3 +72,8 @@ resourceActionCREATE=cr\u00e9\u00e9e
 resourceActionUPDATE=modifi\u00e9e
 resourceActionDELETE=supprim\u00e9e
 resourceActionREPORT=signal\u00e9e
+resourceActionCOMMENT=comment\u00e9e
+resourceActionSUSPEND=suspendue
+resourceActionPENDING_VALIDATION=en attente de validation
+resourceActionREFUSE=refus\u00e9e
+resourceActionVALIDATE=valid\u00e9e
